incorporated Joel's and removed swap implementation
