# swagger.json
@@ -32,6 +32,7 @@
   "paths": {
     "/metrics": {
       "get": {
+        "description": "An empty list returns if there is no loaded metrics.",
         "consumes": [
           "application/json",
           "application/x-protobuf"
@@ -44,7 +45,10 @@
           "http",
           "https"
         ],
-        "summary": "lists a list of loaded metric types. An empty list returns if there is no loaded metrics. Any bad request results in error.",
+        "tags": [
+          "plugins"
+        ],
+        "summary": "Get Metrics",
         "operationId": "getMetrics",
         "parameters": [
           {
@@ -76,6 +80,7 @@
     },
     "/plugins": {
       "get": {
+        "description": "An empty list is returned if there are no loaded plugins.",
         "consumes": [
           "application/json",
           "application/x-protobuf"
@@ -88,7 +93,10 @@
           "http",
           "https"
         ],
-        "summary": "lists a list of loaded plugins. An empty list is returned if there is no loaded plugins.",
+        "tags": [
+          "plugins"
+        ],
+        "summary": "Get All",
         "operationId": "getPlugins",
         "parameters": [
           {
@@ -122,6 +130,7 @@
         }
       },
       "post": {
+        "description": "A plugin binary is required.",
         "consumes": [
           "application/json",
           "application/x-protobuf",
@@ -136,7 +145,10 @@
           "http",
           "https"
         ],
-        "summary": "loads a plugin based on input.",
+        "tags": [
+          "plugins"
+        ],
+        "summary": "Load",
         "operationId": "loadPlugin",
         "parameters": [
           {
@@ -168,6 +180,7 @@
     },
     "/plugins/{ptype}/{pname}/{pversion}": {
       "get": {
+        "description": "An error will be returned if the plugin does not exist.",
         "consumes": [
           "application/json",
           "application/x-protobuf"
@@ -180,7 +193,10 @@
           "http",
           "https"
         ],
-        "summary": "lists a given plugin by its type, name and version. No plugin found error returns if it's not existing.",
+        "tags": [
+          "plugins"
+        ],
+        "summary": "Get",
         "operationId": "getPlugin",
         "parameters": [
           {
@@ -227,6 +243,7 @@
         }
       },
       "delete": {
+        "description": "Required fields are plugin type, name and version.",
         "consumes": [
           "application/json",
           "application/x-protobuf",
@@ -241,7 +258,10 @@
           "http",
           "https"
         ],
-        "summary": "unloads a plugin by its type, name and version.Otherwise, an error is returned.",
+        "tags": [
+          "plugins"
+        ],
+        "summary": "Unload",
         "operationId": "unloadPlugin",
         "parameters": [
           {
@@ -293,7 +313,7 @@
     },
     "/plugins/{ptype}/{pname}/{pversion}/config": {
       "get": {
-        "description": "Any other type results in error.",
+        "description": "An empty config is returned if there are no configs for the plugin.",
         "consumes": [
           "application/json",
           "application/x-protobuf"
@@ -306,7 +326,10 @@
           "http",
           "https"
         ],
-        "summary": "lists the config of a giving plugin. The allowed plugin types are collector, processor, and publisher.",
+        "tags": [
+          "plugins"
+        ],
+        "summary": "Get Config",
         "operationId": "getPluginConfigItem",
         "parameters": [
           {
@@ -347,6 +370,7 @@
         }
       },
       "put": {
+        "description": "A config is JSON. For example: {\"user\":\"snap\", \"host\":\"ocean_eleven\"}.",
         "consumes": [
           "application/json",
           "application/x-protobuf"
@@ -359,7 +383,10 @@
           "http",
           "https"
         ],
-        "summary": "updates the config of a giving plugin. A wrong plugin type or non-numeric plugin version results in error.",
+        "tags": [
+          "plugins"
+        ],
+        "summary": "Set Config",
         "operationId": "setPluginConfigItem",
         "parameters": [
           {
@@ -406,7 +433,7 @@
         }
       },
       "delete": {
-        "description": "At lease one config key is required for this operation. An error occurs for any bad request.",
+        "description": "A minimum of one config key is required for this operation.",
         "consumes": [
           "application/json",
           "application/x-protobuf"
@@ -419,7 +446,10 @@
           "http",
           "https"
         ],
-        "summary": "deletes the config of a giving plugin. Note that that to be removed config items are a slice of config keys.",
+        "tags": [
+          "plugins"
+        ],
+        "summary": "Delete Config",
         "operationId": "deletePluginConfigItem",
         "parameters": [
           {
@@ -470,81 +500,9 @@
         }
       }
     },
-    "/plugins/{ptype}/{pname}/{pversion}/swap": {
-      "post": {
-        "consumes": [
-          "application/json",
-          "application/x-protobuf",
-          "multipart/form-data"
-        ],
-        "produces": [
-          "application/json",
-          "application/x-protobuf",
-          "multipart/form-data"
-        ],
-        "schemes": [
-          "http",
-          "https"
-        ],
-        "summary": "unloads an existing plugin then loads a new plugin.",
-        "operationId": "swapPlugins",
-        "parameters": [
-          {
-            "type": "string",
-            "x-go-name": "PName",
-            "name": "pname",
-            "in": "path",
-            "required": true
-          },
-          {
-            "type": "integer",
-            "format": "int64",
-            "x-go-name": "PVersion",
-            "name": "pversion",
-            "in": "path",
-            "required": true
-          },
-          {
-            "enum": [
-              "collector",
-              " processor",
-              " publisher"
-            ],
-            "type": "string",
-            "x-go-name": "PType",
-            "name": "ptype",
-            "in": "path",
-            "required": true
-          },
-          {
-            "type": "file",
-            "x-go-name": "PluginData",
-            "description": "loads a plugin.",
-            "name": "plugin_data",
-            "in": "formData"
-          }
-        ],
-        "responses": {
-          "201": {
-            "$ref": "#/responses/PluginResponse"
-          },
-          "400": {
-            "$ref": "#/responses/ErrorResponse"
-          },
-          "409": {
-            "$ref": "#/responses/ErrorResponse"
-          },
-          "415": {
-            "$ref": "#/responses/ErrorResponse"
-          },
-          "500": {
-            "$ref": "#/responses/ErrorResponse"
-          }
-        }
-      }
-    },
     "/tasks": {
       "get": {
+        "description": "An empty list returns if no tasks exist.",
         "consumes": [
           "application/json",
           "application/x-protobuf"
@@ -557,7 +515,10 @@
           "http",
           "https"
         ],
-        "summary": "lists a list of created tasks. An empty list returns if no created tasks.",
+        "tags": [
+          "tasks"
+        ],
+        "summary": "Get All",
         "operationId": "getTasks",
         "responses": {
           "200": {
@@ -566,6 +527,7 @@
         }
       },
       "post": {
+        "description": "A string representation of Snap task manifest is required.",
         "consumes": [
           "application/json",
           "application/x-protobuf"
@@ -578,7 +540,10 @@
           "http",
           "https"
         ],
-        "summary": "creates a task based on the input. Othereise, an error returns if the input misses the required fields or is in a malformed format.",
+        "tags": [
+          "tasks"
+        ],
+        "summary": "Add",
         "operationId": "addTask",
         "parameters": [
           {
@@ -602,6 +567,7 @@
     },
     "/tasks/{id}": {
       "get": {
+        "description": "The task ID is required.",
         "consumes": [
           "application/json",
           "application/x-protobuf"
@@ -614,7 +580,10 @@
           "http",
           "https"
         ],
-        "summary": "lists a task by the giving task id. Otherwise a not found error returns.",
+        "tags": [
+          "tasks"
+        ],
+        "summary": "Get",
         "operationId": "getTask",
         "parameters": [
           {
@@ -635,6 +604,7 @@
         }
       },
       "put": {
+        "description": "The task ID is required.",
         "consumes": [
           "application/json",
           "application/x-protobuf"
@@ -647,7 +617,10 @@
           "http",
           "https"
         ],
-        "summary": "updates a task's state for the giving task id and the input state. An error occurs for any bad request.",
+        "tags": [
+          "tasks"
+        ],
+        "summary": "Enable/Start/Stop",
         "operationId": "updateTaskState",
         "parameters": [
           {
@@ -682,6 +655,7 @@
         }
       },
       "delete": {
+        "description": "The task ID is required.",
         "consumes": [
           "application/json",
           "application/x-protobuf"
@@ -694,7 +668,10 @@
           "http",
           "https"
         ],
-        "summary": "deletes a task for the giving task id. Note that only a stopped task may be removed. Otherwise, an error occurs.",
+        "tags": [
+          "tasks"
+        ],
+        "summary": "Remove",
         "operationId": "removeTask",
         "parameters": [
           {
@@ -720,6 +697,7 @@
     },
     "/tasks/{id}/watch": {
       "get": {
+        "description": "The task ID is required.",
         "consumes": [
           "application/json",
           "application/x-protobuf",
@@ -734,7 +712,10 @@
           "http",
           "https"
         ],
-        "summary": "watches a task data stream for the giving task id. Otherwise, an error returns.",
+        "tags": [
+          "tasks"
+        ],
+        "summary": "Watch",
         "operationId": "watchTask",
         "parameters": [
           {
@@ -894,8 +875,6 @@
           "x-go-name": "Namespace"
         },
         "policy": {
-          "description": "Policy a slice of metric rules.",
-          "x-go-name": "Policy",
           "$ref": "#/definitions/PolicyTableSlice"
         },
         "unit": {
@@ -986,7 +965,6 @@
       "x-go-package": "github.com/intelsdi-x/snap/mgmt/rest/v2"
     },
     "PolicyTable": {
-      "x-go-package": "github.com/intelsdi-x/snap/mgmt/rest/v2",
       "$ref": "#/definitions/RuleTable"
     },
     "PolicyTableSlice": {
@@ -1178,7 +1156,6 @@
       "title": "StreamedTaskEvent defines the task watching data type.",
       "properties": {
         "event": {
-          "x-go-name": "Event",
           "$ref": "#/definitions/StreamedMetrics"
         },
         "message": {
@@ -1251,7 +1228,6 @@
           "x-go-name": "Name"
         },
         "schedule": {
-          "x-go-name": "Schedule",
           "$ref": "#/definitions/Schedule"
         },
         "start": {
@@ -1268,7 +1244,6 @@
           "x-go-name": "Version"
         },
         "workflow": {
-          "x-go-name": "Workflow",
           "$ref": "#/definitions/WorkflowMap"
         }
       },
@@ -1290,7 +1265,6 @@
       ],
       "properties": {
         "collect": {
-          "x-go-name": "Collect",
           "$ref": "#/definitions/CollectWorkflowMapNode"
         }
       },
@@ -1299,7 +1273,7 @@
   },
   "responses": {
     "ErrorResponse": {
-      "description": "Error unsuccessful generic response to a failed API call",
+      "description": "Error",
       "schema": {
         "$ref": "#/definitions/Error"
       }
@@ -1361,7 +1335,6 @@
         "type": "object",
         "properties": {
           "task_watch": {
-            "x-go-name": "TaskWatch",
             "$ref": "#/definitions/StreamedTaskEvent"
           }
         }
@@ -1373,7 +1346,6 @@
         "type": "object",
         "properties": {
           "tasks": {
-            "x-go-name": "Tasks",
             "$ref": "#/definitions/Tasks"
           }
         }
